全局使用 border-box

--- a/app/scss/_scaffolding.scss
+++ b/app/scss/_scaffolding.scss
@@ -1,2 +1,4 @@
-li { list-style: none; }
-a  { text-decoration: none; }
+* {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
