--- a/app/index.scss
+++ b/app/index.scss
@@ -1,4 +1,5 @@
 @import "scss/pure_0.5.0.scss";
+@import "scss/grid.scss";
 @import "scss/variables";
 @import "scss/mixin";
 @import "scss/utility";
