--- a/app/index.scss
+++ b/app/index.scss
@@ -3,5 +3,5 @@
 @import "scss/variables";
 @import "scss/mixin";
 @import "scss/utility";
-@import "scss/panel";
 @import "scss/scaffolding";
+@import "scss/components";
