--- a/app/scss/_variables.scss
+++ b/app/scss/_variables.scss
@@ -1,5 +1,7 @@
-$red: #f14d4a;
-$green: #00c000;
-$light_gray: #f7f7f7;
-$gray: #999999;
-$dark: #000000;
+$red: #d4482e;
+$green: #38BC59;
+$silver: #ececec;
+$gray: #bebebe;
+$black: #000000;
+$dim_black: #282828;
+$coffee: #ccac7b;
