--- a/app/index.scss
+++ b/app/index.scss
@@ -1,7 +1,7 @@
-@import "scss/pure_0.5.0.scss";
-@import "scss/grid.scss";
-@import "scss/variables";
-@import "scss/mixin";
-@import "scss/utility";
-@import "scss/scaffolding";
-@import "scss/components";
+@import 'scss/grid';
+@import 'scss/variables';
+@import 'scss/mixin';
+@import 'scss/utility';
+@import 'scss/type';
+@import 'scss/scaffolding';
+@import 'scss/components';
