Global for body

--- a/app/scss/_scaffolding.scss
+++ b/app/scss/_scaffolding.scss
@@ -1,7 +1,11 @@
-/*
- * 全局应用的样式
- */
+// 全局应用的样式
 * {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
+}
+
+body {
+  color: $body-bg;
+  font-family: $body-font-family;
+  font-size: $font-size-base;
 }
