--- a/app/scss/_type.scss
+++ b/app/scss/_type.scss
@@ -3,24 +3,24 @@
 
 h1, h2, h3, h4, h5, h6,
 .h1, .h2, .h3, .h4, .h5, .h6 {
-  font-family: $headings-font-family;
-  font-weight: $headings-font-weight;
-  line-height: $headings-line-height;
-  color: $headings-color;
+  // color: $headings-color;
+  // font-family: $headings-font-family;
+  // font-weight: $headings-font-weight;
+  // line-height: $headings-line-height;
 }
 
 h1, .h1,
 h2, .h2,
 h3, .h3 {
-  margin-top: $line-height-computed;
   margin-bottom: ($line-height-computed / 2);
+  margin-top: $line-height-computed;
 }
 
 h4, .h4,
 h5, .h5,
 h6, .h6 {
-  margin-top: ($line-height-computed / 2);
   margin-bottom: ($line-height-computed / 2);
+  margin-top: ($line-height-computed / 2);
 }
 
 h1, .h1 { font-size: $font-size-h1; }
@@ -38,7 +38,8 @@ p {
 }
 
 // TODO
-span { }
+span,
+.span {  }
 
 small,
 .small {
