--- a/app/scss/_mixin.scss
+++ b/app/scss/_mixin.scss
@@ -1,5 +1,9 @@
-/*箭头向右的三角形*/
-@mixin triangle_right ($size, $color){
+// color & background
+@mixin font-color($color) { color: $color; }
+@mixin bg-color($color)   { background-color: $color; }
+
+// 箭头向右的三角形
+@mixin triangle-right ($size, $color) {
   content: '';
   width: 0;
   height: 0;
