--- a/app/scss/_scaffolding.scss
+++ b/app/scss/_scaffolding.scss
@@ -1,12 +1,11 @@
 //
 // Scaffolding
 // --------------------------------------------------
-
 *，
-*:before,
-*:after {
+*:after,
+*:before {
   -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing        : border-box;
 }
 
 //TODO 是否使用 rem 单位
@@ -16,9 +15,9 @@
 // }
 
 body {
-  color: $text-color;
+  color      : $text-color;
   font-family: $body-font-family;
-  font-size: $font-size-base;
+  font-size  : $font-size-base;
 }
 
 // icon-font
@@ -27,7 +26,7 @@ i .icon {
 }
 
 a {
-  color: $text-color;
+  color          : $text-color;
   text-decoration: none;
 }
 
