--- a/app/scss/_variables.scss
+++ b/app/scss/_variables.scss
@@ -1,9 +1,7 @@
 //
 // Variables
 // --------------------------------------------------
-
 //== Colors
-
 $white                 : #fff;
 $red                   : #d4482e;
 $green                 : #38bc59;
@@ -16,42 +14,35 @@ $coffee                : #ccac7b;
 //== Scaffolding
 //
 //## Settings for some of the most global styles.
-
 //** Background color for `<body>`.
-$body-bg               : $silver;
-//** Global text color on `<body>`.
-$text-color            : $black;
-//** Global font-family on `<body>`.
+$body-bg               : $silver; //** Global text color on `<body>`.
+$text-color            : $black; //** Global font-family on `<body>`.
 $body-font-family      : "PingFang SC", "Microsoft Yahei", Arial, sans-serif;
 
+
 //**TODO Global textual link color.
-//$link-color:            $brand-primary;
+//$link-color:            $bran d-primary;
 //** Link hover color set via `darken()` function.
 //$link-hover-color:      darken($link-color, 15%);
 //** Link hover decoration.
 //$link-hover-decoration: underline;
-
 //== Typography
 //
 //## Font, line-height, and color for body text, headings, and more.
 $font-size-base        : 14px;
 $font-size-large       : ceil(($font-size-base * 1.25)); // ~18px
 $font-size-small       : ceil(($font-size-base * .85)); // ~12px
-
 $font-size-h1          : floor(($font-size-base * 2.6)); // ~36px
 $font-size-h2          : floor(($font-size-base * 2.15)); // ~30px
 $font-size-h3          : ceil(($font-size-base * 1.7)); // ~24px
 $font-size-h4          : ceil(($font-size-base * 1.25)); // ~18px
 $font-size-h5          : $font-size-base;
 $font-size-h6          : ceil(($font-size-base * .85)); // ~12px
-
 //** Unit-less `line-height` for use in components like buttons.
 $line-height-base      : 1.428571429; // 20px ÷ 14px = 1.428571429
 //** Computed "line-height" (`font-size` * `line-height`) for use with `margin`, `padding`, etc.
 $line-height-computed  : floor(($font-size-base * $line-height-base)); // ~20px
-
 //== Z-index
-
 $zindex-menu-link      : 1010;
 $zindex-mask-background: 1020;
 $zindex-navbar         : 1030;
@@ -61,10 +52,8 @@ $zindex-tooltip        : 1070;
 //== Navs-toggle
 //TODO
 //
-
 // Basics of a navbar
 // TODO
-
 // like:
 // $navbar-height:                    50px;
 // $navbar-margin-bottom:             $line-height-computed;
@@ -72,10 +61,8 @@ $zindex-tooltip        : 1070;
 // $navbar-collapse-max-height:       340px;
 //TODO
 //
-
 // Basics of a navbar
 // TODO
-
 // like:
 // $navbar-height:                    50px;
 // $navbar-margin-bottom:             $line-height-computed;
