--- a/app/scss/_type.scss
+++ b/app/scss/_type.scss
@@ -57,3 +57,12 @@ small,
 .text-center         { text-align: center; }
 .text-justify        { text-align: justify; }
 .text-nowrap         { white-space: nowrap; }
+
+i {
+  font-family              : "iconfont" !important;
+  font-size                : $font-size-large ;
+  font-style               : normal;
+  -webkit-font-smoothing   : antialiased;
+  -webkit-text-stroke-width: .2px;
+  -moz-osx-font-smoothing  : grayscale;
+}
