添加作品库页面全局样式

--- a/app/scss/_variables.scss
+++ b/app/scss/_variables.scss
@@ -3,24 +3,19 @@
 // --------------------------------------------------
 //== Colors
 $white                 : #fff;
-$red                   : #d4482e;
-$green                 : #38bc59;
+$red                   : #d42e2e;
+$green                 : #38bb59;
 $silver                : #ececec;
 $gray                  : #bebebe;
 $black                 : #000;
 $dim-black             : #282828;
-$coffee                : #ccac7b;
-
-//== Scaffolding
+$coffee                : #cc7b7b; //== Scaffolding
 //
 //## Settings for some of the most global styles.
 //** Background color for `<body>`.
 $body-bg               : $silver; //** Global text color on `<body>`.
-$text-color            : $black; //** Global font-family on `<body>`.
-$body-font-family      : "PingFang SC", "Microsoft Yahei", Arial, sans-serif;
-
-
-//**TODO Global textual link color.
+$text-color            : $dim-black; //** Global font-family on `<body>`.
+$body-font-family      : "PingFang SC", "Microsoft Yahei", Arial, sans-serif; //**TODO Global textual link color.
 //$link-color:            $bran d-primary;
 //** Link hover color set via `darken()` function.
 //$link-hover-color:      darken($link-color, 15%);
@@ -48,7 +43,46 @@ $zindex-mask-background: 1020;
 $zindex-navbar         : 1030;
 $zindex-popover        : 1060;
 $zindex-tooltip        : 1070;
-
+/* *CardComponent 作品库列表Card组件***************************************** */
+/* thumbnail 缩略图 */
+$thumbnail-width       : 100%;
+$thumbnail-height      : 255px;
+/* panel-des 描述面板 */
+$panel-des-padding     : 15px 10px;
+$panel-des-color       : $white;
+/* title 标题文字 */
+$title-size            : 16px;
+$title-line-height     : 24px;
+$title-color           : $dim-black;
+/* caption 说明文字 */
+$caption-size          : 12px;
+$caption-line-height   : 24px;
+$caption-color         : $gray;
+/* avatar 头像 */
+$avatar-width          : 50px;
+$avatar-height         : 50px;
+$avatar-radius         : 50%;
+/* tags 标签 */
+$tags-bg               : rgba(0,0,0,0.8);
+$tags-line-height      : 35px;
+/* PagerComponent 翻页组件***************************************** */
+$pager-height           : 50px;
+$pager-width            : 100%;
+$pager-bg-color         : #ffffff;
+/* MenuBarComponent 菜单组件***************************************** */
+$menu-bg-color         : $dim-black;
+$menu-mask-color       : rgba(0,0,0,0.8);
+$menu-width            : 70%;
+/* 菜单字体 */
+$menu-font-size        : $font-size-small;
+$menu-line-height      : 60px;
+/* 菜单点击，悬停 */
+$menu-color            : #5a5a5a;
+$menu-hover-color      : $white;
+$menu-active-color     : $white;
+/* tags 标签 */
+$menu-icon-width       : 15px;
+$menu-icon-height      : 15px;
 //== Navs-toggle
 //TODO
 //
