--- a/app/scss/_scaffolding.scss
+++ b/app/scss/_scaffolding.scss
@@ -18,6 +18,7 @@ body {
   color      : $text-color;
   font-family: $body-font-family;
   font-size  : $font-size-base;
+  -webkit-font-smoothing: antialiased;
 }
 
 // icon-font
