--- a/app/scss/components/_side_menu.scss
+++ b/app/scss/components/_side_menu.scss
@@ -29,29 +29,94 @@
   -webkit-transition: background 0.2s;
   transition        : background 0.2s;
 }
-· .fade_toggle {
-  background: rgba(0, 0, 0, .6);
+
+.fade_toggle {
+  background: $menu-mask-color;
 }
 
 .actionsheet {
   position                   : fixed;
   left                       : 0;
   top                        : 0;
-  // -webkit-transform: translate(-100%, 0);
+  -webkit-transform          : translate(-100%, 0);
   transform                  : translate(-100%, 0);
   -webkit-backface-visibility: hidden;
   backface-visibility        : hidden;
   z-index                    : $zindex-navbar;
-  width                      : 60%;
+  width                      : $menu-width;
   height                     : 100%;
-  background-color           : #EFEFF4;
+  background-color           : $dim-black;
   -webkit-transition         : -webkit-transform 0.2s ease-in-out;
   transition                 : -webkit-transform 0.2s ease-in-out;
   transition                 : transform 0.2s ease-in-out;
   transition                 : transform 0.2s, -webkit-transform 0.2s ease-in-out;
+  color                      : $menu-color;
+  font-size                  : $menu-font-size;
 }
 
 .actionsheet_toggle {
   -webkit-transform: translate(0, 0);
   transform        : translate(0, 0);
+}
+
+.menu-slide-header {
+  margin    : 30px auto 35px;
+  width     : 100%;
+  text-align: center;
+
+  .portrait {
+    width        : $menu-avatar-width;
+    height       : $menu-avatar-height;
+    margin       : auto;
+    background   : #fff;
+    border-radius: 50%;
+
+    img {
+      width : $menu-avatar-width;
+      height: $menu-avatar-height;
+    }
+  }
+
+  .nickname {
+    margin   : 25px 0 35px;
+    font-size: $menu-username-size;
+    color    : $menu-username-color;
+  }
+}
+
+.menu-slide-nav ul li {
+  margin-left  : $menu-margin-left;
+  line-height  : $menu-line-height;
+  border-bottom: 1px lighten($dim-black, 4%) solid;
+
+  a {
+    color: $menu-color;
+
+    span {
+      display       : inline-block;
+      vertical-align: bottom;
+    }
+  }
+
+  i {
+    display       : inline-block;
+    vertical-align: bottom;
+    padding-right : 30px;
+    font-size     : $menu-icon-size;
+  }
+
+  .active {
+    color: $menu-active-color;
+  }
+}
+
+.menu-slide-footer {
+  position   : absolute;
+  left       : $menu-margin-left;
+  bottom     : $menu-margin-bottom;
+  line-height: $menu-footer-lineheight;
+
+  a {
+    color: $menu-color;
+  }
 }
