--- a/app/index.scss
+++ b/app/index.scss
@@ -4,6 +4,7 @@
 @import 'scss/grid';
 @import 'scss/variables';
 @import 'scss/mixin';
+@import 'scss/placeholder';
 
 // 第二优先级（依赖最顶层的变量，方法等）
 @import 'scss/utility';
