优化侧边导航样式

--- a/app/scss/_variables.scss
+++ b/app/scss/_variables.scss
@@ -81,7 +81,7 @@ $pager-bg-color           : #ffffff;
 $menu-bg-color            : $dim-black;
 $menu-mask-color          : rgba(0,0,0,0.8);
 $menu-width               : 70%;
-$menu-margin-left         : 35px;
+$menu-icon-margin        : 33px;
 $menu-margin-bottom       : 42px;
 
 /* 菜单头像 portrait*/
