--- a/app/scss/components/_side_menu.scss
+++ b/app/scss/components/_side_menu.scss
@@ -1,15 +1,44 @@
-// .pure-img-responsive {
-//   max-width: 100%;
-//   height: auto;
-// }
+/* *菜单导航nav-slide***************************************** */
+/*  actionsheet  */
+$menu-bg-color            : $dim-black;
+$menu-mask-color          : rgba(0,0,0,0.8);
+$menu-width               : 70%;
+$menu-icon-margin         : 33px;
+$menu-margin-bottom       : 42px;
+
+/* 菜单头像 portrait*/
+$menu-avatar-width        : 90px;
+$menu-avatar-height       : 90px;
+
+/* menu-icon */
+$menu-icon-size           : $font-size-h3;
+
+/* 用户状态 nickname */
+$menu-username-size       : 16px;
+$menu-username-line-height: 24px;
+$menu-username-color      : $white;
+
+/* 菜单字体 menu-slide-nav*/
+$menu-font-size           : $font-size-small;
+$menu-line-height         : 60px;
+
+/* 菜单点击，悬停 */
+$menu-color               : #5a5a5a;
+$menu-hover-color         : $white;
+$menu-active-color        : $white;
+
+/* 菜单客服 footer */
+$menu-footer-lineheight   : 25px;
+
+
 .menu-link {
   position  : fixed;
   z-index   : $zindex-menu-link;
-  top       : 20px;
+  top       : 75px;
   left      : 20px;
-  height    : 30px;
-  width     : 30px;
-  background: #f60;
+  width     : 25px;
+  height    : 20px;
+  color     : $white;
 
   i {
     display  : block;
