--- a/app/scss/_mixin.scss
+++ b/app/scss/_mixin.scss
@@ -1,10 +1,10 @@
-// color & background
-@mixin font-color($color) {
-  color: $color;
-}
-@mixin bg-color($color) {
-  background-color: $color;
-}
+// // color & background
+// @mixin font-color($color) {
+//   color: $color;
+// }
+// @mixin bg-color($color) {
+//   background-color: $color;
+// }
 
 // 箭头向右的三角形
 @mixin triangle-right ($size, $color) {
