--- a/app/scss/_scaffolding.scss
+++ b/app/scss/_scaffolding.scss
@@ -2,7 +2,8 @@
 // Scaffolding
 // --------------------------------------------------
 *:before,
-*， *:after {
+*,
+*:after {
   -webkit-box-sizing: border-box;
   box-sizing        : border-box;
 }
