--- a/app/scss/components/_side_menu.scss
+++ b/app/scss/components/_side_menu.scss
@@ -42,6 +42,8 @@ $menu-footer-lineheight: 25px;
 
   i {
     font-size: $menu-link-size;
+    -webkit-box-shadow: 0px 0px 5px $dim-black;
+            box-shadow: 0px 0px 5px $dim-black;
   }
 }
 
