--- a/app/scss/_variables.scss
+++ b/app/scss/_variables.scss
@@ -2,79 +2,81 @@
 // Variables
 // --------------------------------------------------
 //== Colors
-$white                    : #fff;
-$red                      : #d42e2e;
-$green                    : #38bb59;
-$silver                   : #ececec;
-$gray                     : #bebebe;
-$black                    : #000;
-$dim-black                : #282828;
-$coffee                   : #cc7b7b;
+$white                 : #fff;
+$red                   : #d42e2e;
+$green                 : #38bb59;
+$silver                : #ececec;
+$gray                  : #bebebe;
+$black                 : #000;
+$dim-black             : #282828;
+$coffee                : #cc7b7b;
 
 //## Settings for some of the most global styles.
 //** Background color for `<body>`.
-$body-bg                  : $silver;
+$body-bg               : $silver;
 //** Global text color on `<body>`.
-$text-color               : $dim-black;
+$text-color            : $dim-black;
 //** Global font-family on `<body>`.
-$body-font-family         : "PingFang SC", "Microsoft Yahei", Arial, sans-serif;
+$body-font-family      : "PingFang SC", "Microsoft Yahei", Arial, sans-serif;
 
 //== Typography
 //
 //## Font, line-height, and color for body text, headings, and more.
-$font-size-base           : 14px;
-$font-size-large          : ceil(($font-size-base * 1.25)); // ~18px
-$font-size-small          : ceil(($font-size-base * .85)); // ~12px
-$font-size-h1             : floor(($font-size-base * 2.6)); // ~36px
-$font-size-h2             : floor(($font-size-base * 2.15)); // ~30px
-$font-size-h3             : ceil(($font-size-base * 1.7)); // ~24px
-$font-size-h4             : ceil(($font-size-base * 1.25)); // ~18px
-$font-size-h5             : $font-size-base;
-$font-size-h6             : ceil(($font-size-base * .85)); // ~12px
+$font-size-base        : 14px;
+$font-size-large       : ceil(($font-size-base * 1.25)); // ~18px
+$font-size-small       : ceil(($font-size-base * .85)); // ~12px
+$font-size-h1          : floor(($font-size-base * 2.6)); // ~36px
+$font-size-h2          : floor(($font-size-base * 2.15)); // ~30px
+$font-size-h3          : ceil(($font-size-base * 1.7)); // ~24px
+$font-size-h4          : ceil(($font-size-base * 1.25)); // ~18px
+$font-size-h5          : $font-size-base;
+$font-size-h6          : ceil(($font-size-base * .85)); // ~12px
 //** Unit-less `line-height` for use in components like buttons.
-$line-height-base         : 1.428571429; // 20px ÷ 14px = 1.428571429
+$line-height-base      : 1.428571429; // 20px ÷ 14px = 1.428571429
 //** Computed "line-height" (`font-size` * `line-height`) for use with `margin`, `padding`, etc.
-$line-height-computed     : floor(($font-size-base * $line-height-base)); // ~20px
+$line-height-computed  : floor(($font-size-base * $line-height-base)); // ~20px
 
 //== Z-index
-$zindex-menu-link         : 1010;
-$zindex-mask-background   : 1020;
-$zindex-navbar            : 1030;
-$zindex-popover           : 1060;
-$zindex-tooltip           : 1070;
+$zindex-menu-link      : 1000;
+$zindex-selelct        : 1010;
+$zindex-page           : $zindex-selelct;
+$zindex-mask-background: 1020;
+$zindex-navbar         : 1030;
+$zindex-popover        : 1060;
+$zindex-tooltip        : 1070;
 
 /* *CardComponent 作品库列表Card组件***************************************** */
 /* thumbnail 缩略图 */
-$thumbnail-width          : 100%;
-$thumbnail-height         : 255px;
+$thumbnail-width       : 100%;
+$thumbnail-height      : 255px;
 
 /* panel-des 描述面板 */
-$panel-des-padding        : 15px 10px;
-$panel-des-color          : $white;
+$panel-des-padding     : 15px 10px;
+$panel-des-color       : $white;
 
 /* title 标题文字 */
-$title-size               : 16px;
-$title-line-height        : 24px;
-$title-color              : $dim-black;
+$title-size            : 16px;
+$title-line-height     : 24px;
+$title-color           : $dim-black;
 
 /* caption 说明文字 */
-$caption-size             : 12px;
-$caption-line-height      : 24px;
-$caption-color            : $gray;
+$caption-size          : 12px;
+$caption-line-height   : 24px;
+$caption-color         : $gray;
 
 /* avatar 头像 */
-$avatar-width             : 50px;
-$avatar-height            : 50px;
-$avatar-radius            : 50%;
+$avatar-width          : 50px;
+$avatar-height         : 50px;
+$avatar-radius         : 50%;
 
 /* tags 标签 */
-$tags-bg                  : rgba(0,0,0,0.8);
-$tags-line-height         : 35px;
+$tags-bg               : rgba(0,0,0,0.8);
+$tags-line-height      : 35px;
 
 /* PagerComponent 翻页组件***************************************** */
-$pager-height             : 50px;
-$pager-width              : 100%;
-$pager-bg-color           : #ffffff;
+$pager-height          : 50px;
+$pager-width           : 100%;
+$pager-bg-color        : #ffffff;
 
 // Basics of a navbar
 // TODO
