下划线改成「减号」

--- a/app/scss/components/_side_menu.scss
+++ b/app/scss/components/_side_menu.scss
@@ -46,10 +46,10 @@ $menu-footer-lineheight: 25px;
   }
 }
 
-.mask_transition {
+.mask-transition {
   display           : none;
   position          : fixed;
-  z-index           : $zindex-mask-background;
+  z-index           : $zindex-menu-mask;
   width             : 100%;
   height            : 100%;
   top               : 0;
@@ -59,7 +59,7 @@ $menu-footer-lineheight: 25px;
   transition        : background .2s;
 }
 
-.fade_toggle {
+.fade-toggle {
   background: $menu-mask-color;
 }
 
@@ -83,7 +83,7 @@ $menu-footer-lineheight: 25px;
   font-size                  : $menu-font-size;
 }
 
-.actionsheet_toggle {
+.actionsheet-toggle {
   -webkit-transform: translate(0, 0);
   transform        : translate(0, 0);
 }
