--- a/app/scss/components/_select.scss
+++ b/app/scss/components/_select.scss
@@ -51,6 +51,7 @@ $link-height: 30px;
 }
 /* 筛选下拉结果 */
 .select-detail-list {
+  display: none;
   width: 100%;
   padding: 0 10px;
 
@@ -62,4 +63,21 @@ $link-height: 30px;
       border-bottom: none;
     }
   }
+}
+
+.mask-transition-select {
+  display           : none;
+  position          : fixed;
+  z-index           : $zindex-select-mask;
+  width             : 100%;
+  height            : 100%;
+  top               : 0;
+  left              : 0;
+  background        : rgba(0, 0, 0, 0);
+  -webkit-transition: background .1s;
+  transition        : background .1s;
+}
+
+.fade-toggle {
+  background: $menu-mask-color;
 }
