update button&input css

--- a/app/grapher/index.scss
+++ b/app/grapher/index.scss
@@ -11,6 +11,7 @@
 @import '../scss/type';
 @import '../scss/scaffolding';
 @import "../scss/button";
+@import "../scss/input";
 
 // 第三优先级
 @import '../scss/components';
