组件化 input-group

--- a/app/scss/_input.scss
+++ b/app/scss/_input.scss
@@ -63,7 +63,7 @@ input {
     outline       : none;
     border-bottom : 1px solid $white;
     letter-spacing: 5px;
-  }ß
+  }
 }
 
 .input-block {
