--- a/app/scss/_variables.scss
+++ b/app/scss/_variables.scss
@@ -13,9 +13,9 @@ $coffee              : #cc7b7b;
 
 //## Settings for some of the most global styles.
 //** Background color for `<body>`.
-$body-bg             : $silver;
+$body-bg             : $dim-black;
 //** Global text color on `<body>`.
-$text-color          : $dim-black;
+$text-color          : $black;
 //** Global font-family on `<body>`.
 $body-font-family    : "PingFang SC", "Microsoft Yahei", Arial, sans-serif;
 
