--- a/app/scss/_button.scss
+++ b/app/scss/_button.scss
@@ -2,7 +2,8 @@
 // Buttons
 // --------------------------------------------------
 
-.btn {
+.btn
+,button {
   display         : inline-block;
   text-align      : center;
   vertical-align  : middle;
@@ -27,13 +28,6 @@
     border-color: $white;
 
   }
-
-  // &:active,
-  // &.active {
-  //   outline: 0;
-  //   background-image: none;
-  //   .box-shadow(inset 0 3px 5px rgba(0,0,0,.125));
-  // }
 }
 
 // Alternate buttons
@@ -80,4 +74,5 @@
 .btn-block {
   display: block;
   width  : 100%;
+  margin: 0 10px;
 }
