--- a/app/scss/_input.scss
+++ b/app/scss/_input.scss
@@ -6,6 +6,8 @@
   position: relative;
   left    : 0;
   top     : 0;
+  width   : 100%;
+  padding : 0 10px;
 
   input {
     padding: 0 100px 0 50px;
@@ -41,8 +43,7 @@
   }
 
   span {
-    visibility: hidden;
-    color     : $red;
+    color: $red;
   }
 }
 
