--- a/app/scss/_button.scss
+++ b/app/scss/_button.scss
@@ -2,77 +2,63 @@
 // Buttons
 // --------------------------------------------------
 
-.btn
-,button {
-  display         : inline-block;
-  text-align      : center;
-  vertical-align  : middle;
-  touch-action    : manipulation;
-  cursor          : pointer;
-  background-image: none; // Reset unusual Firefox-on-Android default style; see https://github.com/necolas/normalize.css/issues/214
-  border          : 1px $white solid;
-  color           : $white;
-  white-space     : nowrap;
-  font-size       : $btn-font-base;
-  height          : $btn-height;
-  line-height     : $btn-line-height;
-  background      : transparent;
+.btn,
+button {
+  display            : inline-block;
+  text-align         : center;
+  vertical-align     : middle;
+  touch-action       : manipulation;
+  cursor             : pointer;
+  background-image   : none; // Reset unusual Firefox-on-Android default style; see https://github.com/necolas/normalize.css/issues/214
+  white-space        : nowrap;
+  font-size          : $btn-font-base;
+  height             : $btn-height;
+  line-height        : $btn-line-height;
+  background         : transparent;
   -webkit-user-select: none;
 
-  &:focus { outline: none;}
+  &:focus {
+    outline: none;
+  }
+}
+
+.btn-dark {
+  border: 1px $white solid;
+  color : $white;
 
   &.active,
   &:active {
     color       : $dim-black;
     background  : $white;
     border-color: $white;
-
   }
 }
 
-// Alternate buttons
-// --------------------------------------------------
+.btn-black {
+  background: $black;
+  border: none;
+  color : $white;
 
-// .btn-primary {
-//   @include button-variant($btn-primary-color, $btn-primary-bg, $btn-primary-border);
-// }
-// // Success appears as green
-// .btn-success {
-//   @include button-variant($btn-success-color, $btn-success-bg, $btn-success-border);
-// }
-// // Info appears as blue-green
-// .btn-info {
-//   @include button-variant($btn-info-color, $btn-info-bg, $btn-info-border);
-// }
-// // Warning appears as orange
-// .btn-warning {
-//   @include button-variant($btn-warning-color, $btn-warning-bg, $btn-warning-border);
-// }
-// // Danger and error appear as red
-// .btn-danger {
-//   @include button-variant($btn-danger-color, $btn-danger-bg, $btn-danger-border);
-// }
+  &.active,
+  &:active {
+    color       : $black;
+    background  : $white;
+  }
+}
 
-// Button Sizes
-// --------------------------------------------------
-
-// .btn-lg {
-//   // line-height: ensure even-numbered height of button next to large input
-//   @include button-size($padding-large-vertical, $padding-large-horizontal, $font-size-large, $line-height-large, $btn-border-radius-large);
-// }
-// .btn-sm {
-//   // line-height: ensure proper height of button next to small input
-//   @include button-size($padding-small-vertical, $padding-small-horizontal, $font-size-small, $line-height-small, $btn-border-radius-small);
-// }
-// .btn-xs {
-//   @include button-size($padding-xs-vertical, $padding-xs-horizontal, $font-size-small, $line-height-small, $btn-border-radius-small);
-// }
-
-// Block button
-// --------------------------------------------------
+//TODO
+// .btn-primary
+// .btn-success
+// .btn-warning
+// .btn-danger
+// .btn-lg
+// .btn-xs
+// .btn-sm
 
 .btn-block {
-  display: block;
-  width  : 100%;
   margin: 0 10px;
+
+  button {
+    width: 100%;
+  }
 }
