--- a/app/scss/_input.scss
+++ b/app/scss/_input.scss
@@ -1,16 +1,35 @@
 //
 // Buttons
 // --------------------------------------------------
+.input,
+input {
+  display    : inline-block;
+  border     : none;
+  white-space: nowrap;
+  font-size  : $btn-font-base;
+  height     : $btn-height;
+  line-height: $btn-line-height - 25;
+  background : transparent;
 
-.input-group {
+  &.focus,
+  &:focus {
+    outline       : none;
+    border-bottom : 1px solid $white;
+    letter-spacing: 5px;
+  }
+}
+
+.input-group-dark {
   position: relative;
   left    : 0;
   top     : 0;
-  width   : 100%;
   padding : 0 10px;
 
   input {
-    padding: 0 100px 0 50px;
+    width        : 100%;
+    border-bottom: 1px lighten($dim-black, 20%) solid;
+    color        : $white;
+    padding      : 0 100px 0 50px;
   }
 
   i {
@@ -47,27 +66,13 @@
   }
 }
 
-.input,
-input {
-  display      : inline-block;
-  border       : none;
-  border-bottom: 1px lighten($dim-black, 20%) solid;
-  color        : $white;
-  white-space  : nowrap;
-  font-size    : $btn-font-base;
-  height       : $btn-height;
-  line-height  : $btn-line-height - 25;
-  background   : transparent;
+.input-group-light {
+  @extend .input-group-dark;
+  background: $white;
+  margin    : 0 10px;
 
-  &.focus,
-  &:focus {
-    outline       : none;
-    border-bottom : 1px solid $white;
-    letter-spacing: 5px;
+  input {
+    color        : $gray;
+    border-bottom: 1px $white solid;
   }
-}
-
-.input-block {
-  display: block;
-  width  : 100%;
 }
